fixed description spacing

--- a/styles/urlView.scss
+++ b/styles/urlView.scss
@@ -134,7 +134,7 @@ div#options {
 }
 
 #description {
-  margin-top:2rem;
+  margin-top:1rem;
 }
 
 @media (max-width: 600px) {
